Details
Backports
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8234601 | 8u251 | Arun Joseph | P2 | Closed | Fixed | b01 |
JDK-8241171 | jfx11.0.7 | Arun Joseph | P2 | Resolved | Fixed |
Description
We need to update the version of libxslt to the latest version, 1.1.34.
Attachments
Issue Links
- backported by
-
JDK-8241171 Upgrade to libxslt 1.1.34
- Resolved
-
JDK-8234601 Upgrade to libxslt 1.1.34
- Closed
- clones
-
JDK-8217942 Upgrade to libxslt 1.1.33
- Resolved
- is cloned by
-
JDK-8286257 Update libxslt to 1.1.35
- Resolved
- relates to
-
JDK-8234704 Fix attribution in libxslt.md
- Resolved