8234056: Upgrade to libxslt 1.1.34